<resources>
    <string name="app_name">BopIt</string>

    //titulos
    <string name="titulo">BOP IT!!!</string>
    <string name="titulo_about">ABOUT</string>
    <string name="titulo_preference">PREFERENCIAS</string>

    //botones
    <string name="about">About</string>
    <string name="preferencias">Preferencias</string>
    <string name="regresar">Regresar</string>
    <string name="juego">Jugar</string>

    //texto
    <string name="app_description">Hecho por Diego Valderrama. \nEste proyecto es uno piloto del juego BopIt para celular, hecho a partir de un proyecto de la Universidad de Talca</string>
    <string name="splash_info">Diego Valderrama \nXerlocs@yahoo.com</string>

    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="Datos_header">Datos del jugador</string>
    <string name="Personalizar_header">Personalizacion del juego</string>
    <string name="Admin_header">Administracion general</string>

    //Datos settings
    <string name="name_title">Tu nombre</string>
    <string name="puntaje_title">Guardar puntaje mas alto</string>

    //Personalizar settings
    <string name="color_title">Color del juego</string>
    <string name="volumen_title">Volumen del juego</string>
    <string name="intrucciones_title">Mostrar intrucciones</string>
    <string name="botones_title">Tamaño de botones y texto</string>

    //Admin settings
    <string name="valores_title">¿Restablecer los valores predeterminados?</string>

    //Sonidos
    <string name="victoria">Sonido de victoria</string>
    <string name="perder">Sonido de perder</string>
    <string name="fondo">Pausar / Reanudar</string>

    //texto ejemplo
    <string name="textoejemplo">Jugemos</string>
    <string name="puntos">Puntos:</string>

    //texto gesture
    <string name="desliza">Deslizado</string>
    <string name="longpress">Presionando</string>

    //texto acierto
    <string name="logro">Correcto</string>
    <string name="fallo">Fallaste</string>

</resources>