<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/Datos_header">

        <EditTextPreference
            app:key="name"
            app:title="@string/name_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="guardar"
            app:title="@string/puntaje_title"
            app:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/Personalizar_header">

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/color_entries"
            app:entryValues="@array/reply_values"
            app:key="color"
            app:title="@string/color_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="100"
            app:entries="@array/volumen_entries"
            app:entryValues="@array/volumen_values"
            app:key="volumen"
            app:title="@string/volumen_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="true"
            app:entries="@array/instrucciones_entries"
            app:entryValues="@array/instru_values"
            app:key="instrucciones"
            app:title="@string/intrucciones_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="50"
            app:entries="@array/tamaño_entries"
            app:entryValues="@array/tamaño_values"
            app:key="tamaño"
            app:title="@string/botones_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/Admin_header">

        <SwitchPreferenceCompat
            app:key="valores"
            app:title="@string/valores_title"
            app:defaultValue="true"/>

    </PreferenceCategory>


</PreferenceScreen>